  O OBJE-FILE reference should allow to start external viewer via mouse-click
  O TimelineView should use more vertical space if available to allow for more text (horizontal)
  O Configurable selection of Views in Applet
  O ReportMakeHTMLTable should order by something
  O Reports should translate dates to a more readable format (e.g. MAR becomes March)

1.8 - Mar xx 2002 (not released)

  C EditView's create-entity actions will result in confirmation-prompt when clicked
  C Applet opens detail browser window on (new "Browser Details") button click and not single click
  C Applet's default-size for windows is now 640/480
  B Link to image in help HTML is broken (resedit.html)

1.7 - Mar 08 2002

  I Bits are cached for successive calls when reading zip (e.g. file://d:/gedcoms/example.zip#example.ged)
  C Applets refer to zipped ged via GEDCOM=example.zip#example.ged (ARCHIVE still works)
  B Return stack in EditView returns to an entity that has just been deleted
  C Renamed directory holding the reports to 'report'!
  B Tree Overview Window wouldn't reopen because of change introduced in 1.5

1.6 - Mar 05 2002

  I HTML Output knows Umlauts
  B Deleting an entity with only one individual left can cause exception in TreeModel (current selected idx >= size)
  I Dialog Texts Yes/No/OK/Cancel are localizable now, too
  B Re-enabling "Relative of" in create dialog for indi/fam allows selection below
  B TreeOverview now remembers open even when ControlCenter is closed

1.5 - Feb 27 2002

  N Add entities from EditView in a 'grow-from-root-mode' (more intuitive than through ControlCenter)
  I New individuals have more default properties to fill out in EditView
  N Option in TreeView to use abbreviated dates (e.g. 12 1970 01 1971 instead of BETWEEN DEC 1970 AND JAN 1971)
  B Option "Show Property Images" for Tree View is not saved
  N Editing references now offer "Find"-action to easily find entities by text search